--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../staticfiles/css/navbar.css">
+    <link rel="stylesheet" href="../staticfiles/css/page.css">
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to the homepage!</h1>
+    <div id="myNavbar" class="navbar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        
+    </div>
+
+    <div id="main">
+        <!-- Main Page content will go here and all content will be pushed to the side -->
+        <!-- <button onclick="openNav()">Open Navbar</button> -->
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    </div>
 </body>
+    <script src="../staticfiles/js/navbar.js"></script>
 </html>
