Add avatar component, button styles, and update navbar and page background colors

--- a/src/staticfiles/css/navbar.css
+++ b/src/staticfiles/css/navbar.css
@@ -1,3 +1,6 @@
+
+/* Main Page #426408 */
+
 .navbar {
     height: 100%; 
     width: 0; 
@@ -5,7 +8,7 @@
     z-index: 1; 
     top: 0; 
     left: 0;
-    background-color: #111; 
+    background-color: #426408; 
     overflow-x: hidden; 
     padding-top: 60px; 
     transition: 0.5s; 
@@ -37,7 +40,7 @@
   
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
-    transition: margin-left .5s;
+    transition: .5s;
     padding: 20px;
 }
   
