Update button styles and modify homepage button functionality

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -20,10 +20,11 @@
         <div class="avatar">
             <img src="../staticfiles/photos/default.png" alt="avatar">
             <p>Username</p>
-            
         </div>
     
-        <button class="image-button" on-click="alert('Button Clicked')"></button>
+        <div class="home_buttons"> 
+            <button class="image-button"></button>
+        </div>  
     
     </div>
 </body>
