--- a/src/staticfiles/css/button.css
+++ b/src/staticfiles/css/button.css
@@ -2,8 +2,17 @@
 .image-button {
     width: 190px;
     height: 40px;
-    background-size: cover;
+    background-size: object-fit;
+    background-color: #557916;
     background-image: url('../photos/button.png');
+    padding: 0px;
+    margin: 0px;
     border: none;
     cursor: pointer;
+    overflow-x: hidden;
+    box-sizing: border-box;
+}
+
+.image-button:hover{
+    background-image: url('../photos/pressed_button.png');
 }
