--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../staticfiles/css/page.css">
     <link rel="stylesheet" href="../staticfiles/css/avatar.css">
     <link rel="stylesheet" href="../staticfiles/css/button.css">
+    <link rel="stylesheet" href="../staticfiles/css/centered.css">
+    <script src="../staticfiles/js/navbar.js"></script>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Home</title>
 </head>
 <body>
@@ -17,16 +21,16 @@
     <div id="main">
         <!-- Main Page content will go here and all content will be pushed to the side -->
         <span style="font-size:30px;cursor:pointer;color: #FEFAE0;" onclick="openNav()">&#9776;</span>
-        <div class="avatar">
-            <img src="../staticfiles/photos/default.png" alt="avatar">
-            <p>Username</p>
+        <div class="container mt-3">
+            <div class="centered">
+                <div class="avatar">
+                        <img src="../staticfiles/photos/default.png" alt="avatar">
+                        <p>Username</p>
+                </div>
+                <button type="button" class="btn btn-primary active">Scan QR Code</button>
+            </div>
         </div>
-    
-        <div class="home_buttons"> 
-            <button class="image-button"></button>
-        </div>  
-    
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-    <script src="../staticfiles/js/navbar.js"></script>
 </html>
