--- a/src/staticfiles/css/page.css
+++ b/src/staticfiles/css/page.css
@@ -3,5 +3,5 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: #557916;
+    background-color: #557916 !important;
 }
