Fixed navigation issue to static css files in homepage.html

--- a/src/apps/user/templates/user/homepage.html
+++ b/src/apps/user/templates/user/homepage.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../staticfiles/css/navbar.css">
-    <link rel="stylesheet" href="../staticfiles/css/page.css">
-    <link rel="stylesheet" href="../staticfiles/css/avatar.css">
-    <link rel="stylesheet" href="../staticfiles/css/centered.css">
+    <link rel="stylesheet" href="../../../../staticfiles/css/navbar.css">
+    <link rel="stylesheet" href="../../../../staticfiles/css/page.css">
+    <link rel="stylesheet" href="../../../../staticfiles/css/avatar.css">
+    <link rel="stylesheet" href="../../../../staticfiles/css/centered.css">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
     <script src="../staticfiles/js/navbar.js"></script>
     <!-- Bootstrap -->
