--- a/src/apps/user/templates/user/register.html
+++ b/src/apps/user/templates/user/register.html
@@ -5,7 +5,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to register!</h1>
+    <h1>Welcome to Registration!</h1>
     <form method = "POST" autocomplete="off">
         {% csrf_token %}
 
