Fixed static files issue

--- a/src/apps/user/templates/user/landingpage.html
+++ b/src/apps/user/templates/user/landingpage.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../../../../staticfiles/css/navbar.css">
-    <link rel="stylesheet" href="../../../../staticfiles/css/page.css">
-    <link rel="stylesheet" href="../../../../staticfiles/css/avatar.css">
-    <link rel="stylesheet" href="../../../../staticfiles/css/centered.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/avatar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/centered.css' %}">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
-    <script src="../../../../staticfiles/js/navbar.js"></script>
+    <script src="{% static 'js/navbar.js' %}"></script>
     <!-- Bootstrap -->
-    <script src="../../../../staticfiles/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.min.bundle.js"></script>
-    <link rel="stylesheet" href="../../../../staticfiles/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.min.bundle.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <title>Landing Page</title>
 </head>
 <body>
@@ -50,7 +51,7 @@
         <div class="main p-3">
             <div class="centered">
                 <div class="avatar">
-                    <img src="../../../../staticfiles/photos/default.png" alt="avatar">
+                    <img src="{% static 'photos/default.png' %}" alt="avatar">
                     <p>Welcome to EcoGo</p>
                 </div>
                 <button type="button" class="btn btn-success btn-lg mb-3" style="font-family: GameFont, Arial, Helvetica, sans-serif;" onclick="window.location.href='login';">Login</button>
@@ -59,5 +60,5 @@
         </div>
     </div>
 </body>
-<script src="../../../../staticfiles/js/navbar.js"></script>
+<script src="{% static 'js/navbar.js' %}"></script>
 </html>
