--- a/src/static/css/register_files/register_container.css
+++ b/src/static/css/register_files/register_container.css
@@ -1,27 +1,37 @@
-.register_container {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
+.register-container {
+    display: block;
     background-color: white;
-    margin: 0;
-    padding: 0;
-    justify-content: center;
-    align-items: center;
-    
+    padding: 10px;
+    border: 1px solid #28502E;
+    height: 50%;
+    width: 40%;
+    border-radius: 25px;
+    margin-top: 50px; 
 }
 
-.register_container h1 {
+.register-container h1 {
     font-size: 20pt;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: #749c28;
 }
 
+label {
+    margin-bottom: 2px;
+}
+
 input[type=text], input[type=password], input[type=email] {
     width: 50%;
-    margin-bottom: 15px;
     padding: 10px;
     box-sizing: border-box;
     border-radius: 5px;
-    border: 1px solid #749c28;
+    border: 1px solid #28502E;
+    text-align: center;
+}
+
+form div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
