Add footer to registration page; improve password validation event handling and container styles

--- a/src/static/css/register_files/register_container.css
+++ b/src/static/css/register_files/register_container.css
@@ -3,10 +3,11 @@
     background-color: white;
     padding: 10px;
     border: 1px solid #28502E;
-    height: 50%;
+    height: 70%;
     width: 40%;
     border-radius: 25px;
-    margin-top: 50px; 
+    margin-top: 50px;
+    margin-bottom: 50px; 
 }
 
 .register-container h1 {
