--- a/src/apps/user/templates/user/register.html
+++ b/src/apps/user/templates/user/register.html
@@ -8,6 +8,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static '/css/page.css' %}">
     <link rel="stylesheet" href="{% static '/css/centered.css' %}">
+    <link rel="stylesheet" href="{% static '/css/footer.css' %}">
     <link rel="stylesheet" href="{% static '/css/register_files/register_container.css' %}">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
@@ -15,7 +16,10 @@
 <body>
     <div class="centered">
         <div class="register-container shadow-lg">
-            <h1>Create an account!</h1>
+            <h1 style="font-family: GameFont, Arial, Helvetica, sans-serif;">
+                Welcome To.. 
+            </h1>
+            <img src="{% static '/photos/breddie.png' %}" alt="Logo">
             <form>
                 <div>
                     <label>Username</label>
@@ -27,7 +31,7 @@
                 </div>
                 <div>
                     <label>Password</label>
-                    <input type="password" id=password placeholder="Must contain more than 8 characters" minlength="8" required><br>
+                    <input type="password" id="password" placeholder="Must contain more than 8 characters" minlength="8" required><br>
                 </div>
                 <div>
                     <label>Confirm Password</label>
@@ -35,9 +39,15 @@
                 </div>
                 <button type="submit" class="btn btn-outline-success">Register</button> 
             </form>
+            <div id="footer">
+                <p>
+                    Created by Breadscrums.
+                </p>
+                <img src="{% static '/photos/breddie.png' %}" alt="Logo">
+            </div>
         </div>
     </div>
-</body>
+<script src="{% static '/js/confirm_password.js' %}"></script>
 <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'js/confirm_password.js'}"></script>
+</body>
 </html>
