Add logo styling and update registration page layout

--- a/src/apps/user/templates/user/register.html
+++ b/src/apps/user/templates/user/register.html
@@ -19,7 +19,10 @@
             <h1 style="font-family: GameFont, Arial, Helvetica, sans-serif;">
                 Welcome To.. 
             </h1>
-            <img src="{% static '/photos/breddie.png' %}" alt="Logo">
+            <div class="logo">
+                <img src="{% static '/photos/ecogo_logo.png' %}" alt="Logo">
+            <form>
+            </div>
             <form>
                 <div>
                     <label>Username</label>
