Update registration page layout and styles; enhance logo display and form dimensions. Finished the design of the register page

--- a/src/apps/user/templates/user/register.html
+++ b/src/apps/user/templates/user/register.html
@@ -17,11 +17,10 @@
     <div class="centered">
         <div class="register-container shadow-lg">
             <h1 style="font-family: GameFont, Arial, Helvetica, sans-serif;">
-                Welcome To.. 
+                Welcome To... 
             </h1>
             <div class="logo">
                 <img src="{% static '/photos/ecogo_logo.png' %}" alt="Logo">
-            <form>
             </div>
             <form>
                 <div>
