--- a/src/static/css/register_files/register_container.css
+++ b/src/static/css/register_files/register_container.css
@@ -3,8 +3,8 @@
     background-color: white;
     padding: 10px;
     border: 1px solid #28502E;
-    height: 70%;
-    width: 40%;
+    height: 80%;
+    width: 50%;
     border-radius: 25px;
     margin-top: 50px;
     margin-bottom: 50px; 
@@ -18,6 +18,7 @@
 }
 
 label {
+    margin-top: 5px;
     margin-bottom: 2px;
 }
 
@@ -27,7 +28,12 @@ input[type=text], input[type=password], input[type=email] {
     box-sizing: border-box;
     border-radius: 5px;
     border: 1px solid #28502E;
+    margin-top: 5px;
     text-align: center;
+}
+
+button[type=submit] {
+    margin-top: 20px;
 }
 
 form div {
@@ -38,7 +44,13 @@ form div {
 }
 
 .logo {
-    width: 20%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo img {
+    width: 50%;
     height: auto;
 }
 
