Revamp login page layout and styles; add logo, footer, and custom CSS for improved user experience

--- a/src/apps/user/templates/user/register.html
+++ b/src/apps/user/templates/user/register.html
@@ -17,7 +17,7 @@
     <div class="centered">
         <div class="register-container shadow-lg">
             <h1 style="font-family: GameFont, Arial, Helvetica, sans-serif;">
-                Welcome To... 
+                Get Started With... 
             </h1>
             <div class="logo">
                 <img src="{% static '/photos/ecogo_logo.png' %}" alt="Logo">
