--- a/src/apps/user/templates/user/login.html
+++ b/src/apps/user/templates/user/login.html
@@ -3,18 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static '/css/page.css' %}">
+    <link rel="stylesheet" href="{% static '/css/centered.css' %}">
+    <link rel="stylesheet" href="{% static '/css/footer.css' %}">
+    <link rel="stylesheet" href="{% static '/css/login_files/login_container.css' %}">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
 </head>
 <body>
-    <h1>Welcome to Login!</h1>
-    
-    <form method="POST" autocomplete="off">
-        {% csrf_token %}
-
-        
-        {{ loginform.as_p }}
-
-        <input type="submit" value="Login">
-    </form>
+    <div class="centered">
+        <div class="login-container shadow-lg">
+            <h1 style="font-family: GameFont, Arial, Helvetica, sans-serif;">
+                Welcome Back To... 
+            </h1>
+            <div class="logo">
+                <img src="{% static '/photos/ecogo_logo.png' %}" alt="Logo">
+            </div>
+            <form>
+                <div>
+                    <label>Username</label>
+                    <input type="text" placeholder="Username" required><br>
+                </div>
+                <div>
+                    <label>Password</label>
+                    <input type="password" placeholder="Password" required><br>
+                </div>
+                <button type="submit" class="btn btn-outline-success">Login</button>
+            </form>
+            <div id="footer">
+                <p>
+                    Created by Breadscrums.
+                </p>
+                <img src="{% static '/photos/breddie.png' %}" alt="Logo">
+            </div>
+        </div>
+    </div>
+    <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
