--- a/src/apps/user/templates/user/homepage.html
+++ b/src/apps/user/templates/user/homepage.html
@@ -61,7 +61,7 @@
         <div class="main p-3">
             <div class="centered">
                 <div class="avatar">
-                    <img src="{% static '/photos/default.png' %}" alt="avatar}">
+                    <img src="{% static '/photos/default.png' %}" alt="avatar">
                     <p>Username</p>
                 </div>
                 <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif;">Scan QR Code</button>
@@ -70,7 +70,6 @@
         </div>
     </div>
 </body>
-<script src="{% static '/js/navbar.js' %}"></script>
 </html>
 
 
