--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
 </head>
 <body>
     {% if cards %}
@@ -11,7 +12,12 @@
         {% for card in cards %}
             <li>
                 <div>
-                    <h3>{{ card.card_name }}</h3>
+                    <h3>name: {{ card.card_name }}</h3>
+                    <p>desc: {{card.card_desc}}</p>
+                    <p>value: {{card.value}}</p>
+                    <p>quant: {{card.quant}}</p>
+                    <img src= "{% static 'photos/cards/Renewable_Energy_Card_Template.png' %}" alt="card background" style="width:200px;height: 200px;">
+                    <img src= "{% static card.image_path %}" alt="card image" style="width:200px;height: 200px;">
                 </div>
             </li>
         {% endfor %}
