--- a/src/static/css/landing_files/text-box.css
+++ b/src/static/css/landing_files/text-box.css
@@ -10,14 +10,14 @@
 }
 
 .text-box h1 {
-    font-family: GameFont, Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .text-box p {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    font-size: 16px;
+    font-size: 18px;
 }
