--- a/src/apps/cards/templates/cards/display_card.html
+++ b/src/apps/cards/templates/cards/display_card.html
@@ -24,6 +24,7 @@
                 <p class="lead mb-4">You have already claimed:</p>
             </div>
             <div class="card_div">
+                <img class="d-block mx-auto mb-4" src="{% static card_frame %}" alt="" width="480" height="960">
                 <h1 class="display-5 fw-bold text-body-emphasis">{{card_name}}</h1>
                 <img class="d-block mx-auto mb-4" src="{% static card_image %}" alt="{{card_name}}" width="480" height="480">
                 <div class="col-lg-6 mx-auto">
