--- a/src/apps/user/templates/user/homepage.html
+++ b/src/apps/user/templates/user/homepage.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="{% static '/css/page.css' %}">
     <link rel="stylesheet" href="{% static '/css/avatar.css' %}">
     <link rel="stylesheet" href="{% static '/css/centered.css' %}">
+    <link rel="stylesheet" href="{% static '/css/footer.css' %}">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
-    <script src="{% static '/js/navbar.js' %}"></script>
     <!-- Bootstrap -->
-    <script src="{% static '/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.min.bundle.js' %}"></script>
-    <link rel="stylesheet" href="{% static '/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' }%">
+    <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <title>Home</title>
 </head>
 <body>
@@ -69,6 +68,8 @@
             </div>
         </div>
     </div>
+    <script src="{% static '/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.min.bundle.js' %}"></script>
+    <script src="{% static '/js/navbar.js' %}"></script>
 </body>
 </html>
 
