--- a/src/apps/user/templates/user/homepage.html
+++ b/src/apps/user/templates/user/homepage.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="{% static '/css/page.css' %}">
     <link rel="stylesheet" href="{% static '/css/avatar.css' %}">
     <link rel="stylesheet" href="{% static '/css/centered.css' %}">
+    <link rel="stylesheet" href="{% static '/css/footer.css' %}">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
-    <script src="{% static '/js/navbar.js' %}"></script>
     <!-- Bootstrap -->
-    <script src="{% static '/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.min.bundle.js' %}"></script>
-    <link rel="stylesheet" href="{% static '/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' }%">
+    <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <title>Home</title>
 </head>
 <body>
@@ -61,7 +60,7 @@
         <div class="main p-3">
             <div class="centered">
                 <div class="avatar">
-                    <img src="{% static '/photos/default.png' %}" alt="avatar}">
+                    <img src="{% static '/photos/default.png' %}" alt="avatar">
                     <p>Username</p>
                 </div>
                 <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif;">Scan QR Code</button>
@@ -69,8 +68,9 @@
             </div>
         </div>
     </div>
+    <script src="{% static '/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.min.bundle.js' %}"></script>
+    <script src="{% static '/js/navbar.js' %}"></script>
 </body>
-<script src="{% static '/js/navbar.js' %}"></script>
 </html>
 
 
