--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -3,27 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {% load static %}
+    <link rel="stylesheet" href="{% static '/css/page.css' %}">
+    <link rel="stylesheet" href="{% static '/css/centered.css' %}">
+    <link rel="stylesheet" href="{% static '/css/inventory_files/inventory-container.css' %}">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="{% static '/css/footer.css' %}">
+    <link rel="icon" href="data:,">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
+    <title>Document</title>
 </head>
 <body>
-    {% if cards %}
-        <ul>
-        {% for card in cards %}
-            <li>
-                <div>
+    <div class="inventory-container">
+        {% if cards %}
+            <ul>
+            {% for card in cards %}
+                <li>
                     <h3>name: {{ card.card_name }}</h3>
                     <p>desc: {{card.card_desc}}</p>
                     <p>value: {{card.value}}</p>
                     <p>quant: {{card.quant}}</p>
                     <img src= "{% static 'images/card_frames/frame0_renewable.png' %}" alt="card background" style="width:200px;height: 200px;">
                     <img src= "{% static card.image_path %}" alt="card image" style="width:200px;height: 200px;">
-                </div>
-            </li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p> error, no cards </p>
-    {% endif %}
+                </li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p> error, no cards </p>
+        {% endif %}
+    </div>
+    <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
