--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="{% static '/css/navbar.css' %}">
     <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_container.css' %}">
     <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_grid.css' %}">
-    <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="icon" href="data:,">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
-    <title>Document</title>
+    <title>Inventory</title>
 </head>
 <body>
     <div class="wrapper">
