--- a/src/ecoGo/static/css/inventory_files/inventory_container.css
+++ b/src/ecoGo/static/css/inventory_files/inventory_container.css
@@ -8,6 +8,8 @@
     margin: 0 auto;
     margin-top: 56px;
     border-radius: 25px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     box-shadow: -8px 9px 16px -3px gray;
     background: #171738;
@@ -96,9 +98,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around; 
-    padding: 50px 6px;
+    padding: 0px 6px;
     box-sizing: border-box;
-    font-size: 1.2em;
+    font-size: 16px;
 }
 
 p {
