--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -7,12 +7,12 @@
     {% load static %}
     <link rel="stylesheet" href="{% static '/css/page.css' %}">
     <link rel="stylesheet" href="{% static '/css/centered.css' %}">
-    <link rel="stylesheet" href="{% static '/css/footer.css' %}">
     <link rel="stylesheet" href="{% static '/css/navbar.css' %}">
     <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_container.css' %}">
     <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_grid.css' %}">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="{% static '/css/normalise.css' %}">
     <link rel="icon" href="data:,">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
@@ -47,37 +47,36 @@
         </aside>
         <div class="main p-3">
             {% if cards %}
-                <ul class="cards">
-                {% for card in cards %}
-                    <div class="card_container">
-                        <div class="card_background">
-                            <div class="card_frame">
-                                <div class=frame_header>
-                                    <h1 class="name" style="font-family: GameFont, Arial, Helvetica, sans-serif;">{{ card.card_name }}</h1>
+                <ul class="card-grid">
+                    {% for card in cards %}
+                    <li>
+                        <div class="card">
+                            <div class="bar bar-top">
+                                <div class="card-title">{{card.card_name}}</div>
+                            </div>
+                            <div class="card-image">
+                                <img src= "{% static card.image_path %}" alt="card image">
+                            </div>
+                                <div class="bar bar-mid">
+                                    <div class="card-title">Instant</div>
                                 </div>
-                               <img src= "{% static card.image_path %}" alt="card image" class="frame_art">
-            
-                                <div class="frame_type_line">
-                                    <h1 class="type" style="font-family: GameFont, Arial, Helvetica, sans-serif;">Legendary Creature</h1>
-                                </div>
-                                <div class="frame_text_box">
-                                    <p class="description ftb_inner_margin">{{ card.card_desc }}</p>
-                                </div>
-                                <div class="frame_bottom_info">
-                                    <div class="centered">
-                                        <p> Created by Breadscrums. </p>
-                                    </div>
+                            <div class="card-text">
+                                <div class="card-ability">
+                                    {{card.card_desc}}
                                 </div>
                             </div>
+                            <div class="footer">
+                                <div class="author">Created by Breadscrums.</div>
+                            </div>
                         </div>
-                    </div>
-                {% endfor %}
+                    </li>
+                    {% endfor %}
                 </ul>
             {% else %}
                 <h1>No cards</h1>
             {% endif %}
+            </div>
         </div>
-    </div>
     <script src="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
 </body>
