--- a/src/ecoGo/static/css/inventory_files/inventory_grid.css
+++ b/src/ecoGo/static/css/inventory_files/inventory_grid.css
@@ -1,9 +1,8 @@
-.cards {
-    max-width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+    gap: 16px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
