--- a/src/apps/user/templates/user/inventory.html
+++ b/src/apps/user/templates/user/inventory.html
@@ -46,6 +46,14 @@
             </div>
         </aside>
         <div class="main p-3">
+            <div class="inventory_header">
+                <div class="centered">
+                    <h1> Inventory </h1>
+                    <p>
+                        All of the cards collected by {{ user.username }}.
+                    </p>
+                </div>
+            </div>
             {% if cards %}
                 <ul class="card-grid">
                     {% for card in cards %}
